--- a/career-item.html
+++ b/career-item.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1678063461332">
+		<link rel="stylesheet" href="./css/main.css?v=1678148630309">
 	</head>
 	<body>
 		<!-- Header-->
@@ -239,11 +239,11 @@
 						</p><a class="footer__link footer__link--mail" href="mailto:info@mjr-terminal.ru">info@mjr-terminal.ru</a><a class="footer__link footer__link--contacts" href="/">Связаться с нами</a>
 						<p class="footer__text">Мы в социальных сетях</p>
 						<ul class="footer__social social">
-							<li class="social__elem"><a class="social__link" href="" target="_blank" rel="noreferrer" aria-label="Youtube">
+							<li class="social__elem"><a class="social__link" href="#" target="_blank" rel="noreferrer" aria-label="Youtube">
 									<svg class="social__link-icon">
 										<use xlink:href="#youtube-blue"></use>
 									</svg></a></li>
-							<li class="social__elem"><a class="social__link" href="" target="_blank" rel="noreferrer" aria-label="Telegram">
+							<li class="social__elem"><a class="social__link" href="#" target="_blank" rel="noreferrer" aria-label="Telegram">
 									<svg class="social__link-icon">
 										<use xlink:href="#telegram"></use>
 									</svg></a></li>
@@ -252,11 +252,10 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1678063461332"></script>
-		<script src="./js/main.js?v=1678063461332"></script><svg width="0" height="0" class="hidden">
-	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" id="telegram">
-		<circle cx="25" cy="25" r="25" fill="currentColor"></circle>
-		<path d="M33.4399 18.6223L30.2711 33.566C30.0319 34.6205 29.4086 34.883 28.5229 34.3865L23.6944 30.8285L21.3649 33.0695C21.1069 33.3275 20.8916 33.5428 20.3944 33.5428L20.7416 28.6258L29.6899 20.54C30.0791 20.1935 29.6051 20.0008 29.0854 20.348L18.0229 27.314L13.2604 25.823C12.2246 25.4998 12.2059 24.7873 13.4764 24.29L32.1041 17.1133C32.9666 16.79 33.7211 17.3053 33.4399 18.623V18.6223Z" fill="white"></path>
+		<script src="./js/vendor.js?v=1678148630310"></script>
+		<script src="./js/main.js?v=1678148630310"></script><svg width="0" height="0" class="hidden">
+	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42" id="time">
+		<path d="M20.9825 3.5C11.3225 3.5 3.5 11.34 3.5 21C3.5 30.66 11.3225 38.5 20.9825 38.5C30.66 38.5 38.5 30.66 38.5 21C38.5 11.34 30.66 3.5 20.9825 3.5ZM21 35C13.265 35 7 28.735 7 21C7 13.265 13.265 7 21 7C28.735 7 35 13.265 35 21C35 28.735 28.735 35 21 35ZM20.615 12.25H20.51C19.81 12.25 19.25 12.81 19.25 13.51V21.77C19.25 22.3825 19.565 22.96 20.1075 23.275L27.37 27.6325C27.965 27.9825 28.735 27.8075 29.085 27.2125C29.1729 27.0708 29.2313 26.9129 29.2569 26.7481C29.2824 26.5833 29.2746 26.4151 29.2338 26.2534C29.1929 26.0918 29.12 25.94 29.0193 25.8071C28.9185 25.6742 28.7921 25.563 28.6475 25.48L21.875 21.455V13.51C21.875 12.81 21.315 12.25 20.615 12.25Z" fill="#004996"></path>
 	</symbol>
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" id="vk">
 		<circle cx="25" cy="25" r="25" fill="currentColor"></circle>
@@ -281,11 +280,11 @@
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
-	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 24" id="chevron-list-blue">
-		<path d="M3 21L12 12L3 3" stroke="#004996" stroke-width="5" stroke-linecap="round"></path>
-	</symbol>
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 36" id="chevron-right">
 		<path d="M2 34L18 18L2 2" stroke="currentColor" stroke-width="4" stroke-linecap="round"></path>
+	</symbol>
+	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 24" id="chevron-list-blue">
+		<path d="M3 21L12 12L3 3" stroke="#004996" stroke-width="5" stroke-linecap="round"></path>
 	</symbol>
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38 70" id="chevron-right-big">
 		<path d="M1 69L36 35L1 0.999998" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
@@ -306,6 +305,10 @@
 	</symbol>
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="search-loupe">
 		<path d="M10 18C11.775 17.9996 13.4988 17.4054 14.897 16.312L19.293 20.708L20.707 19.294L16.311 14.898C17.405 13.4997 17.9996 11.7754 18 10C18 5.589 14.411 2 10 2C5.589 2 2 5.589 2 10C2 14.411 5.589 18 10 18ZM10 4C13.309 4 16 6.691 16 10C16 13.309 13.309 16 10 16C6.691 16 4 13.309 4 10C4 6.691 6.691 4 10 4Z" fill="currentColor"></path>
+	</symbol>
+	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" id="telegram">
+		<circle cx="25" cy="25" r="25" fill="currentColor"></circle>
+		<path d="M33.4399 18.6223L30.2711 33.566C30.0319 34.6205 29.4086 34.883 28.5229 34.3865L23.6944 30.8285L21.3649 33.0695C21.1069 33.3275 20.8916 33.5428 20.3944 33.5428L20.7416 28.6258L29.6899 20.54C30.0791 20.1935 29.6051 20.0008 29.0854 20.348L18.0229 27.314L13.2604 25.823C12.2246 25.4998 12.2059 24.7873 13.4764 24.29L32.1041 17.1133C32.9666 16.79 33.7211 17.3053 33.4399 18.623V18.6223Z" fill="white"></path>
 	</symbol>
 </svg>
 
