--- a/case-item.html
+++ b/case-item.html
@@ -5,11 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width">
 		<meta name="description" content="Описание">
-		<title>Карьера</title>
+		<title>Карточка кейса</title>
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1678148630881">
+		<link rel="stylesheet" href="./css/main.css?v=1678148631125">
 	</head>
 	<body>
 		<!-- Header-->
@@ -82,7 +82,7 @@
 		</header>
 		<main>
 			<!-- Section Hero-->
-			<section class="section-hero section-hero--career">
+			<section class="section-hero section-hero--with-cards section-hero--case">
 				<div class="container">
 					<!-- Breadcrumbs-->
 					<div class="breadcrumb section-hero__breadcrumb breadcrumb--white">
@@ -93,124 +93,142 @@
 									<use xlink:href="#chevron-right"></use>
 								</svg>
 							</li>
-							<li class="breadcrumb__item"><span class="breadcrumb__current">Карьера</span></li>
+							<li class="breadcrumb__item"><span class="breadcrumb__current">Кейсы</span></li>
 						</ul>
 					</div>
-					<h1 class="section-hero__title">Карьера в Ma<span class="text-red">j</span>or Terminal</h1>
-					<p class="section-hero__text">Осуществление перевозки и оформления Карнета АТА выставочных макетов фюзеляжа<br>дальнемагистрального бизнес-джета Bombardier</p>
-					<div class="section-hero__job-search job-search">
-						<p class="job-search__label">Поиск по вакансиям</p>
-						<form class="job-search__row">
-							<div class="dropdown">
-								<div class="dropdown__value-box">
-									<input class="dropdown__value" type="text" value="Москва" disabled>
-									<svg class="dropdown__arrow">
-										<use xlink:href="#chevron-dropdown"></use>
-									</svg>
-								</div>
-								<ul class="dropdown__options-list">
-									<li class="dropdown__option dropdown__option--selected" data-value="Москва">Москва</li>
-									<li class="dropdown__option" data-value="Санкт-Петербург">Санкт-Петербург</li>
-									<li class="dropdown__option" data-value="Нижний Новгород">Нижний Новгород</li>
-								</ul>
-							</div>
-							<div class="dropdown">
-								<div class="dropdown__value-box">
-									<input class="dropdown__value" type="text" value="Менеджмент" disabled>
-									<svg class="dropdown__arrow">
-										<use xlink:href="#chevron-dropdown"></use>
-									</svg>
-								</div>
-								<ul class="dropdown__options-list">
-									<li class="dropdown__option dropdown__option--selected" data-value="Менеджмент">Менеджмент</li>
-									<li class="dropdown__option" data-value="IT">IT</li>
-									<li class="dropdown__option" data-value="HR отдел">HR отдел</li>
-									<li class="dropdown__option" data-value="Склад">Склад</li>
-									<li class="dropdown__option" data-value="Служба качества">Служба качества</li>
-								</ul>
-							</div>
-							<button class="button button--outline-white button--md button--text-big" type="submit">Найти</button>
-						</form>
-					</div><img class="section-hero__bg" src="images/section-hero/bg2.jpg" alt>
+					<h1 class="section-hero__title">Доставка и оформление негабаритных<br>выставочных макетов фюзеляжа самолета</h1>
+					<p class="section-hero__text">Осуществление перевозки и оформления Карнета АТА выставочных макетов фюзеляжа<br>дальнемагистрального бизнес-джета Bombardier</p><img class="section-hero__bg" src="images/section-hero/bg1.jpg" alt>
+					<!-- Cards-->
+					<div class="section-hero__card-row">
+						<article class="section-hero__card">
+							<h2 class="section-hero__card-title">Задача</h2>
+							<ul class="list-arrow list-arrow--blue">
+								<li class="list-arrow__elem">Осуществление портового экспедирования</li>
+								<li class="list-arrow__elem">Оформление ввоза на территорию РФ выставочного оборудования по процедуре<br>Карнет АТА в максимально короткие сроки</li>
+								<li class="list-arrow__elem">Доставка негабаритных выставочных макетов фюзеляжа</li>
+							</ul>
+						</article>
+						<article class="section-hero__card">
+							<h2 class="section-hero__card-title">Сложности</h2>
+							<ul class="list-arrow list-arrow--blue">
+								<li class="list-arrow__elem">Знание рынка контейнерных перевозок</li>
+								<li class="list-arrow__elem">Знание систем слежения и дислокации ЖД вагонов и контейнеров<br>кругооборота парка и его полной загрузки на каждом плече</li>
+								<li class="list-arrow__elem">Знание специализированных программ по контролю за контейнерным оборудованием</li>
+							</ul>
+						</article>
+					</div>
 				</div>
 			</section>
-			<!-- Section Services-->
-			<section class="section-services section-services--career">
+			<div class="container">
+				<!-- Decision-->
+				<arcticle class="decision">
+					<h2 class="h2 decision__title">Решение</h2>
+					<p class="decision__text">Благодаря предварительной подготовке к моменту прибытия груза в порт Санкт-Петербурга был согласован и предоставлен необходимый транспорт для дальнейшей транспортировки груза, получены необходимые разрешительные документы. Срок исполнения: 2 месяц с момента первого обращения, перевозка по готовности груза – 10 дней</p>
+				</arcticle>
+			</div>
+			<!-- Section Case list-->
+			<section class="section-case-list section-case-list--other container">
+				<div class="section-case-list__title-box">
+					<h2 class="h2 text-blue section-case-list__title">Другие кейсы</h2>
+				</div>
+				<div class="section-case-list__grid">
+					<!-- Card--><a class="section-case-list__card card card--cases card--with-tag-line" href="#">
+						<ul class="card__tag-list">
+							<li class="card__tag">Fashion</li>
+							<li class="card__tag">Складское хранение</li>
+							<li class="card__tag">Вешальное хранение</li>
+							<li class="card__tag">Еще (7)</li>
+						</ul>
+						<div class="card__text-box">
+							<p class="card__text">Здесь будет чуть больше информации по описанию для данного кейса</p>
+						</div>
+						<div class="card__title-box">
+							<p class="card__title">Кейс FMCG (табак)</p>
+							<svg class="card__arrow">
+								<use xlink:href="#chevron-right-big"></use>
+							</svg>
+						</div>
+						<div class="card__bg-box"><img class="card__bg" src="images/section-cases/bg1.jpg" alt></div></a>
+					<!-- Card--><a class="section-case-list__card card card--cases card--with-tag-line" href="#">
+						<ul class="card__tag-list">
+							<li class="card__tag">Fashion</li>
+							<li class="card__tag">Fashion</li>
+						</ul>
+						<div class="card__text-box">
+							<p class="card__text">Здесь будет чуть больше информации по описанию для данного кейса</p>
+						</div>
+						<div class="card__title-box">
+							<p class="card__title">Кейс FMCG (Healthcare)</p>
+							<svg class="card__arrow">
+								<use xlink:href="#chevron-right-big"></use>
+							</svg>
+						</div>
+						<div class="card__bg-box"><img class="card__bg" src="images/section-cases/bg2.jpg" alt></div></a>
+					<!-- Card--><a class="section-case-list__card card card--cases card--with-tag-line" href="#">
+						<ul class="card__tag-list">
+							<li class="card__tag">FMCG</li>
+							<li class="card__tag">Складское хранение</li>
+						</ul>
+						<div class="card__text-box">
+							<p class="card__text">Здесь будет чуть больше информации по описанию для данного кейса</p>
+						</div>
+						<div class="card__title-box">
+							<p class="card__title">Кейс FMCG (алкоголь)</p>
+							<svg class="card__arrow">
+								<use xlink:href="#chevron-right-big"></use>
+							</svg>
+						</div>
+						<div class="card__bg-box"><img class="card__bg" src="images/section-cases/bg3.jpg" alt></div></a>
+					<!-- Card--><a class="section-case-list__card card card--cases card--with-tag-line" href="#">
+						<ul class="card__tag-list">
+							<li class="card__tag">Fashion</li>
+							<li class="card__tag">Fashion</li>
+						</ul>
+						<div class="card__text-box">
+							<p class="card__text">Здесь будет чуть больше информации по описанию для данного кейса</p>
+						</div>
+						<div class="card__title-box">
+							<p class="card__title">Кейс Fashion</p>
+							<svg class="card__arrow">
+								<use xlink:href="#chevron-right-big"></use>
+							</svg>
+						</div>
+						<div class="card__bg-box"><img class="card__bg" src="images/section-cases/bg4.jpg" alt></div></a>
+				</div>
+				<div class="section-case-list__button-row">
+					<button class="button button--outline-blue button--md button--text-big section-case-list__button">Показать еще</button>
+				</div>
+			</section>
+			<!-- Section Invite-->
+			<div class="section-invite">
 				<div class="container">
-					<div class="section-services__title-box">
-						<h2 class="h2 text-blue section-services__title">Категории вакансий</h2><a class="button button--white button--sm" href="#">Все категории</a>
-					</div>
-					<div class="section-services__nav nav-row">
-						<ul class="nav-list">
-							<li class="nav-list__elem"><a class="nav-list__link nav-list__link--active" href="#">Менеджмент</a></li>
-							<li class="nav-list__elem"><a class="nav-list__link" href="#">IT</a></li>
-							<li class="nav-list__elem"><a class="nav-list__link" href="#">HR отдел</a></li>
-							<li class="nav-list__elem"><a class="nav-list__link" href="#">Склад</a></li>
-							<li class="nav-list__elem"><a class="nav-list__link" href="#">Служба<br>качества</a></li>
-						</ul>
-					</div>
-				</div>
-			</section>
-			<!-- Section Career-->
-			<section class="section-career container">
-				<!-- Block-->
-				<div class="section-career__block">
-					<div class="section-career__block-col">
-						<h2 class="h2 text-blue section-career__title">Работать в Мэйджор Терминал — одно удовольствие</h2>
-						<ul class="list-arrow list-arrow--blue-heavy section-career__list">
-							<li class="list-arrow__elem">Карьерный и профессиональный рост<br>(система наставничества и кадровый резерв)</li>
-							<li class="list-arrow__elem">Привлекательная система материальной и нематериальной мотивации;</li>
-							<li class="list-arrow__elem">Корпоративная культура и сильная команда профессионалов</li>
-							<li class="list-arrow__elem">Корпоративное обучение (внутреннее и внешнее), возможность изучения английского языка, корпоративная библиотека;</li>
-						</ul>
-					</div>
-					<div class="section-career__block-col">
-						<div class="section-career__block-img-box"><img class="section-career__block-img" src="images/section-career/img1.jpg" alt></div>
+					<div class="section-invite__row">
+						<div class="section-invite__col">
+							<!-- Card--><a class="section-invite__card" href="#">
+								<div class="section-invite__card-content">
+									<p class="section-invite__card-title">Вебинары</p>
+									<p class="section-invite__card-text">Познакомьтесь с современными тенденциями складской деятельности в режиме онлайн</p>
+								</div>
+								<svg class="section-invite__card-arrow">
+									<use xlink:href="#chevron-right-big"></use>
+								</svg></a>
+						</div>
+						<div class="section-invite__col">
+							<!-- Card--><a class="section-invite__card" href="#">
+								<div class="section-invite__card-content">
+									<p class="section-invite__card-title">Наши кейсы</p>
+									<p class="section-invite__card-text">Изучите наш опыт в сфере складской логистики и получите похожее решение</p>
+								</div>
+								<svg class="section-invite__card-arrow">
+									<use xlink:href="#chevron-right-big"></use>
+								</svg></a>
+						</div>
 					</div>
 				</div>
-				<!-- Block-->
-				<div class="section-career__block">
-					<div class="section-career__block-col">
-						<ul class="list-arrow list-arrow--blue-heavy section-career__list">
-							<li class="list-arrow__elem">Корпоративные тарифы на сотовую связь;</li>
-							<li class="list-arrow__elem">Скидки на туристические поездки;</li>
-							<li class="list-arrow__elem">Юридическая помощь;</li>
-							<li class="list-arrow__elem">Добровольное медицинское страхование для сотрудников и родственников;</li>
-							<li class="list-arrow__elem">Корпоративные мероприятия<br>(для сотрудников и для детей сотрудников)</li>
-						</ul>
-					</div>
-					<div class="section-career__block-col">
-						<div class="section-career__block-img-box"><img class="section-career__block-img" src="images/section-career/img2.jpg" alt></div>
-					</div>
-				</div>
-				<!-- Block-->
-				<div class="section-career__block">
-					<div class="section-career__block-col">
-						<ul class="list-arrow list-arrow--blue-heavy section-career__list">
-							<li class="list-arrow__elem">Скидки на покупку и обслуживание автомобиля в дилерских центрах Major Auto</li>
-							<li class="list-arrow__elem">Возможность аренды автомобиля на корпоративных условиях;</li>
-							<li class="list-arrow__elem">Корпоративное питание</li>
-							<li class="list-arrow__elem">Карьерный и профессиональный рост (система наставничества и кадровый резерв)</li>
-							<li class="list-arrow__elem">Привлекательная система материальной и нематериальной мотивации;</li>
-						</ul>
-					</div>
-					<div class="section-career__block-col">
-						<div class="section-career__block-img-box"><img class="section-career__block-img" src="images/section-career/img3.jpg" alt></div>
-					</div>
-				</div>
-			</section>
-			<!-- Section Video link-->
-			<section class="section-video-link">
-				<div class="container">
-					<h2 class="section-video-link__title">Посмотрите как мы работаем<br>и отдыхаем Major life 2023</h2><a class="button button--blue button--white-shadow button--md button--with-icon" href="#">
-						<svg class="button__icon">
-							<use xlink:href="#play"></use>
-						</svg>Посмотреть видео</a>
-				</div>
-			</section>
+			</div>
 		</main>
 		<!-- Footer-->
-		<footer class="footer">
+		<footer class="footer footer--low-top-padding">
 			<div class="container footer__container">
 				<div class="footer__row">
 					<!-- Nav col-->
@@ -273,8 +291,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1678148630881"></script>
-		<script src="./js/main.js?v=1678148630881"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1678148631126"></script>
+		<script src="./js/main.js?v=1678148631126"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42" id="time">
 		<path d="M20.9825 3.5C11.3225 3.5 3.5 11.34 3.5 21C3.5 30.66 11.3225 38.5 20.9825 38.5C30.66 38.5 38.5 30.66 38.5 21C38.5 11.34 30.66 3.5 20.9825 3.5ZM21 35C13.265 35 7 28.735 7 21C7 13.265 13.265 7 21 7C28.735 7 35 13.265 35 21C35 28.735 28.735 35 21 35ZM20.615 12.25H20.51C19.81 12.25 19.25 12.81 19.25 13.51V21.77C19.25 22.3825 19.565 22.96 20.1075 23.275L27.37 27.6325C27.965 27.9825 28.735 27.8075 29.085 27.2125C29.1729 27.0708 29.2313 26.9129 29.2569 26.7481C29.2824 26.5833 29.2746 26.4151 29.2338 26.2534C29.1929 26.0918 29.12 25.94 29.0193 25.8071C28.9185 25.6742 28.7921 25.563 28.6475 25.48L21.875 21.455V13.51C21.875 12.81 21.315 12.25 20.615 12.25Z" fill="#004996"></path>
 	</symbol>
