--- a/contacts.html
+++ b/contacts.html
@@ -5,11 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width">
 		<meta name="description" content="Описание">
-		<title>Карьера</title>
+		<title>Контакты</title>
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1678148630881">
+		<link rel="stylesheet" href="./css/main.css?v=1678148631523">
 	</head>
 	<body>
 		<!-- Header-->
@@ -81,131 +81,131 @@
 			</div>
 		</header>
 		<main>
-			<!-- Section Hero-->
-			<section class="section-hero section-hero--career">
-				<div class="container">
-					<!-- Breadcrumbs-->
-					<div class="breadcrumb section-hero__breadcrumb breadcrumb--white">
-						<ul class="breadcrumb__list">
-							<li class="breadcrumb__item">
-								<!-- if breadcrumb is single--><a class="breadcrumb__link" href="#" title="Главная">Главная</a>
-								<svg class="breadcrumb__arrow">
-									<use xlink:href="#chevron-right"></use>
+			<!-- Breadcrumbs-->
+			<div class="breadcrumb container">
+				<ul class="breadcrumb__list">
+					<li class="breadcrumb__item">
+						<!-- if breadcrumb is single--><a class="breadcrumb__link" href="#" title="Главная">Главная</a>
+						<svg class="breadcrumb__arrow">
+							<use xlink:href="#chevron-right"></use>
+						</svg>
+					</li>
+					<li class="breadcrumb__item"><span class="breadcrumb__current">Контакты</span></li>
+				</ul>
+			</div>
+			<!-- Section Contacts info-->
+			<section class="section-contact-info container">
+				<h1 class="h1 section-contact-info__title">Контакты</h1>
+				<div class="section-contact-info__links">
+					<div class="section-contact-info__links-col"><a class="section-contact-info__link" href="tel:84957376006">+7 (495) 737 60 06</a>
+						<p class="section-contact-info__link-description">операционные вопросы</p><a class="section-contact-info__link" href="tel:84951169724">+7 (495) 116 97 24</a>
+						<p class="section-contact-info__link-description">отдел продаж</p>
+					</div>
+					<div class="section-contact-info__links-col"><a class="section-contact-info__link section-contact-info__link--mail" href="mailto:sales_mt@mjr.ru">sales_mt@mjr.ru</a>
+						<ul class="social social--big section-contact-info__social">
+							<li class="social__elem"><a class="social__link" href="#" target="_blank" rel="noreferrer" aria-label="Youtube">
+									<svg class="social__link-icon">
+										<use xlink:href="#vk"></use>
+									</svg></a></li>
+							<li class="social__elem"><a class="social__link" href="#" target="_blank" rel="noreferrer" aria-label="Telegram">
+									<svg class="social__link-icon">
+										<use xlink:href="#telegram"></use>
+									</svg></a></li>
+							<li class="social__elem"><a class="social__link" href="#" target="_blank" rel="noreferrer" aria-label="Youtube">
+									<svg class="social__link-icon">
+										<use xlink:href="#youtube-blue"></use>
+									</svg></a></li>
+						</ul>
+					</div>
+					<div class="section-contact-info__links-col"><a class="button button--blue button--sm button--text-medium section-contact-info__mail-button" href="mailto:sales_mt@mjr.ru">Написать нам</a></div>
+				</div>
+				<div class="section-contact-info__object">
+					<div class="section-contact-info__object-col section-contact-info__object-col--text">
+						<div class="dropdown dropdown--logopark section-contact-info__dropdown">
+							<div class="dropdown__value-box">
+								<input class="dropdown__value" type="text" value="Логопарк Major" disabled>
+								<svg class="dropdown__arrow">
+									<use xlink:href="#chevron-dropdown"></use>
 								</svg>
-							</li>
-							<li class="breadcrumb__item"><span class="breadcrumb__current">Карьера</span></li>
-						</ul>
-					</div>
-					<h1 class="section-hero__title">Карьера в Ma<span class="text-red">j</span>or Terminal</h1>
-					<p class="section-hero__text">Осуществление перевозки и оформления Карнета АТА выставочных макетов фюзеляжа<br>дальнемагистрального бизнес-джета Bombardier</p>
-					<div class="section-hero__job-search job-search">
-						<p class="job-search__label">Поиск по вакансиям</p>
-						<form class="job-search__row">
-							<div class="dropdown">
-								<div class="dropdown__value-box">
-									<input class="dropdown__value" type="text" value="Москва" disabled>
-									<svg class="dropdown__arrow">
-										<use xlink:href="#chevron-dropdown"></use>
-									</svg>
-								</div>
-								<ul class="dropdown__options-list">
-									<li class="dropdown__option dropdown__option--selected" data-value="Москва">Москва</li>
-									<li class="dropdown__option" data-value="Санкт-Петербург">Санкт-Петербург</li>
-									<li class="dropdown__option" data-value="Нижний Новгород">Нижний Новгород</li>
-								</ul>
 							</div>
-							<div class="dropdown">
-								<div class="dropdown__value-box">
-									<input class="dropdown__value" type="text" value="Менеджмент" disabled>
-									<svg class="dropdown__arrow">
-										<use xlink:href="#chevron-dropdown"></use>
-									</svg>
-								</div>
-								<ul class="dropdown__options-list">
-									<li class="dropdown__option dropdown__option--selected" data-value="Менеджмент">Менеджмент</li>
-									<li class="dropdown__option" data-value="IT">IT</li>
-									<li class="dropdown__option" data-value="HR отдел">HR отдел</li>
-									<li class="dropdown__option" data-value="Склад">Склад</li>
-									<li class="dropdown__option" data-value="Служба качества">Служба качества</li>
-								</ul>
+							<ul class="dropdown__options-list">
+								<li class="dropdown__option dropdown__option--selected" data-value="Логопарк Major">Логопарк Major</li>
+								<li class="dropdown__option" data-value="Логопарк Major 2">Логопарк Major 2</li>
+								<li class="dropdown__option" data-value="Логопарк Major 3">Логопарк Major 3</li>
+							</ul>
+						</div>
+						<h2 class="section-contact-info__object-title">
+							Москва, Логопарк
+							<span class="text-blue">Ma<span class="text-red">j</span>or</span>
+						</h2>
+						<p class="section-contact-info__object-text"><strong class="text-weight-bold"> Адрес:</strong>
+							143581, Московская область, Истринский муниципальный район, Сельское поселение Павло-Слободское, село Павловская Слобода, ул. Ленина, здание №85
+						</p>
+						<div class="section-contact-info__object-time">
+							<svg class="section-contact-info__object-time-icon">
+								<use xlink:href="#time"></use>
+							</svg>
+							<div class="section-contact-info__object-work-box">
+								<p class="section-contact-info__object-work-text text-weight-bold"> Режим работы терминала:</p>
+								<p class="section-contact-info__object-work-text">Круглосуточно</p>
 							</div>
-							<button class="button button--outline-white button--md button--text-big" type="submit">Найти</button>
-						</form>
-					</div><img class="section-hero__bg" src="images/section-hero/bg2.jpg" alt>
+						</div>
+						<div class="section-contact-info__object-time">
+							<svg class="section-contact-info__object-time-icon">
+								<use xlink:href="#time"></use>
+							</svg>
+							<div class="section-contact-info__object-work-box">
+								<p class="section-contact-info__object-work-text text-weight-bold"> Режим работы отдела продаж:</p>
+								<p class="section-contact-info__object-work-text">с 09:00 до 18:00</p>
+							</div>
+						</div>
+					</div>
+					<div class="section-contact-info__object-col section-contact-info__object-col--map"><img class="section-contact-info__map" src="images/section-contact-info/map1.jpg" alt></div>
+				</div>
+				<div class="section-contact-info__route">
+					<div class="section-contact-info__rules">
+						<div class="section-contact-info__rules-text-box">
+							<h2 class="section-contact-info__rules-title">Правила въезда на терминал</h2>
+							<p class="section-contact-info__rules-subtitle">Для въезда на терминал необходимо назвать марку, модель и номер авто</p>
+							<div class="section-contact-info__cite">
+								<p class="section-contact-info__cite-text">В случае, если на КПП нет Ваших данных, необходимо связаться с тем, кто дал Вам заказ на доставку и уточнить передавались ли данные на склад.</p>
+								<p class="section-contact-info__cite-text">Если нет – попросить передать данные по Вашей машине и ФИО  на склад по электронной почте. По телефону сотрудники склада пропуска не заказывают.</p>
+							</div><a class="section-contact-info__rules-phone" href="tel:89032615560">8-903-261-55-60</a>
+							<p class="section-contact-info__rules-text">Дежурный диспетчер:</p>
+							<p class="section-contact-info__rules-text">После прохождения КПП следует проехать ул. Дачная, с. 5, крыльцо между 17 и 16 воротами, зарегистрироваться на пункте охраны склада, следовать указаниям сотрудника охраны.</p>
+							<p class="section-contact-info__rules-text">После регистрации на охране, спуститься с крыльца и повернуть направо, справа от 17х ворот будет красная дверь – это диспетчерская, Вам сюда.  Далее следовать указанию диспетчера склада.</p>
+						</div><img class="section-contact-info__rules-photo" src="images/section-contact-info/photo.jpg" alt>
+					</div>
+					<div class="section-contact-info__map-route-box"><img class="section-contact-info__map-route" src="images/section-contact-info/map2.jpg" alt></div>
 				</div>
 			</section>
-			<!-- Section Services-->
-			<section class="section-services section-services--career">
+			<!-- Section Contacts-->
+			<section class="section-contacts">
 				<div class="container">
-					<div class="section-services__title-box">
-						<h2 class="h2 text-blue section-services__title">Категории вакансий</h2><a class="button button--white button--sm" href="#">Все категории</a>
-					</div>
-					<div class="section-services__nav nav-row">
-						<ul class="nav-list">
-							<li class="nav-list__elem"><a class="nav-list__link nav-list__link--active" href="#">Менеджмент</a></li>
-							<li class="nav-list__elem"><a class="nav-list__link" href="#">IT</a></li>
-							<li class="nav-list__elem"><a class="nav-list__link" href="#">HR отдел</a></li>
-							<li class="nav-list__elem"><a class="nav-list__link" href="#">Склад</a></li>
-							<li class="nav-list__elem"><a class="nav-list__link" href="#">Служба<br>качества</a></li>
-						</ul>
-					</div>
-				</div>
-			</section>
-			<!-- Section Career-->
-			<section class="section-career container">
-				<!-- Block-->
-				<div class="section-career__block">
-					<div class="section-career__block-col">
-						<h2 class="h2 text-blue section-career__title">Работать в Мэйджор Терминал — одно удовольствие</h2>
-						<ul class="list-arrow list-arrow--blue-heavy section-career__list">
-							<li class="list-arrow__elem">Карьерный и профессиональный рост<br>(система наставничества и кадровый резерв)</li>
-							<li class="list-arrow__elem">Привлекательная система материальной и нематериальной мотивации;</li>
-							<li class="list-arrow__elem">Корпоративная культура и сильная команда профессионалов</li>
-							<li class="list-arrow__elem">Корпоративное обучение (внутреннее и внешнее), возможность изучения английского языка, корпоративная библиотека;</li>
-						</ul>
-					</div>
-					<div class="section-career__block-col">
-						<div class="section-career__block-img-box"><img class="section-career__block-img" src="images/section-career/img1.jpg" alt></div>
-					</div>
-				</div>
-				<!-- Block-->
-				<div class="section-career__block">
-					<div class="section-career__block-col">
-						<ul class="list-arrow list-arrow--blue-heavy section-career__list">
-							<li class="list-arrow__elem">Корпоративные тарифы на сотовую связь;</li>
-							<li class="list-arrow__elem">Скидки на туристические поездки;</li>
-							<li class="list-arrow__elem">Юридическая помощь;</li>
-							<li class="list-arrow__elem">Добровольное медицинское страхование для сотрудников и родственников;</li>
-							<li class="list-arrow__elem">Корпоративные мероприятия<br>(для сотрудников и для детей сотрудников)</li>
-						</ul>
-					</div>
-					<div class="section-career__block-col">
-						<div class="section-career__block-img-box"><img class="section-career__block-img" src="images/section-career/img2.jpg" alt></div>
-					</div>
-				</div>
-				<!-- Block-->
-				<div class="section-career__block">
-					<div class="section-career__block-col">
-						<ul class="list-arrow list-arrow--blue-heavy section-career__list">
-							<li class="list-arrow__elem">Скидки на покупку и обслуживание автомобиля в дилерских центрах Major Auto</li>
-							<li class="list-arrow__elem">Возможность аренды автомобиля на корпоративных условиях;</li>
-							<li class="list-arrow__elem">Корпоративное питание</li>
-							<li class="list-arrow__elem">Карьерный и профессиональный рост (система наставничества и кадровый резерв)</li>
-							<li class="list-arrow__elem">Привлекательная система материальной и нематериальной мотивации;</li>
-						</ul>
-					</div>
-					<div class="section-career__block-col">
-						<div class="section-career__block-img-box"><img class="section-career__block-img" src="images/section-career/img3.jpg" alt></div>
-					</div>
-				</div>
-			</section>
-			<!-- Section Video link-->
-			<section class="section-video-link">
-				<div class="container">
-					<h2 class="section-video-link__title">Посмотрите как мы работаем<br>и отдыхаем Major life 2023</h2><a class="button button--blue button--white-shadow button--md button--with-icon" href="#">
-						<svg class="button__icon">
-							<use xlink:href="#play"></use>
-						</svg>Посмотреть видео</a>
+					<h2 class="h2 text-white section-contacts__title">Есть вопросы? Свяжитесь с нами!</h2>
+					<form class="section-contacts__form">
+						<div class="section-contacts__form-row">
+							<div class="section-contacts__form-col section-contacts__form-col--inputs">
+								<div class="section-contacts__input-box">
+									<input class="form-control section-contacts__form-input" type="text" placeholder="Имя">
+								</div>
+								<div class="section-contacts__input-box">
+									<input class="form-control section-contacts__form-input" type="tel" placeholder="*Телефон">
+								</div>
+								<div class="section-contacts__input-box">
+									<input class="form-control section-contacts__form-input" type="email" placeholder="*Адрес электронной почты">
+								</div>
+							</div>
+							<div class="section-contacts__form-col section-contacts__form-col--message">
+								<div class="section-contacts__textarea-box">
+									<textarea class="form-control form-control--textarea section-contacts__form-textarea" placeholder="*Комментарий..."></textarea>
+								</div>
+							</div>
+						</div>
+						<div class="section-contacts__form-submit-box">
+							<button class="button button--white button--lg section-contacts__form-submit">Отправить</button>
+						</div>
+					</form>
 				</div>
 			</section>
 		</main>
@@ -273,8 +273,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1678148630881"></script>
-		<script src="./js/main.js?v=1678148630881"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1678148631524"></script>
+		<script src="./js/main.js?v=1678148631524"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42" id="time">
 		<path d="M20.9825 3.5C11.3225 3.5 3.5 11.34 3.5 21C3.5 30.66 11.3225 38.5 20.9825 38.5C30.66 38.5 38.5 30.66 38.5 21C38.5 11.34 30.66 3.5 20.9825 3.5ZM21 35C13.265 35 7 28.735 7 21C7 13.265 13.265 7 21 7C28.735 7 35 13.265 35 21C35 28.735 28.735 35 21 35ZM20.615 12.25H20.51C19.81 12.25 19.25 12.81 19.25 13.51V21.77C19.25 22.3825 19.565 22.96 20.1075 23.275L27.37 27.6325C27.965 27.9825 28.735 27.8075 29.085 27.2125C29.1729 27.0708 29.2313 26.9129 29.2569 26.7481C29.2824 26.5833 29.2746 26.4151 29.2338 26.2534C29.1929 26.0918 29.12 25.94 29.0193 25.8071C28.9185 25.6742 28.7921 25.563 28.6475 25.48L21.875 21.455V13.51C21.875 12.81 21.315 12.25 20.615 12.25Z" fill="#004996"></path>
 	</symbol>
